ARROW-7781: [C++] Improve message when referencing a missing field

- The failure now indicate which field name is causing the issue.
- Add the `CanReferenceFieldsByNames` in Schema and relevant tests.